--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,14 +6,21 @@
   = javascript_include_tag "application"
   = csrf_meta_tags
 %body
-  - if user_signed_in?
-    Hi, #{ current_user.email } | 
-    = link_to "Sign out", destroy_user_session_path, :method => :delete
-  - else
-    Hi, guest user. you can 
-    = link_to "Login", new_user_session_path 
-    or 
-    = link_to "Sign up", new_user_registration_path
+  #user_nav
+    - if user_signed_in?
+      Hi, #{ current_user.email } | 
+      = link_to "Sign out", destroy_user_session_path, :method => :delete
+    - else
+      Hi, guest user. you can 
+      = link_to "Login", new_user_session_path 
+      or 
+      = link_to "Sign up", new_user_registration_path
+  #navigation
+    = link_to 'Home', root_url
+    |
+    = link_to 'Dashboard', dashboard_url
+    |
+    = link_to 'Posts', posts_url
   %p.notice= notice
   %p.alert= alert
   = yield
