--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -13,9 +13,12 @@
       %td= post.title
       %td= post.content
       %td= link_to 'Show', post
-      %td= link_to 'Edit', edit_post_path(post)
-      %td= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete
+      - if can? :edit, Post
+        %td= link_to 'Edit', edit_post_path(post)
+      - if can? :destroy, Post
+        %td= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete
 
 %br
 
-= link_to 'New Post', new_post_path
+- if can? :create, Post
+  = link_to 'New Post', new_post_path
