--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,6 +7,7 @@
   %b Content:
   = @post.content
 
-= link_to 'Edit', edit_post_path(@post)
-\|
+- if can? :edit, Post
+  = link_to 'Edit', edit_post_path(@post)
+  \|
 = link_to 'Back', posts_path
