--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -17,5 +17,5 @@
       %td= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete
 
 %br
-
-= link_to 'New Post', new_post_path
+- if user_can?(:read, Post)
+  = link_to 'New Post', new_post_path
